--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,10 +1,58 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="eccb8e">  <td>24/05/12 16:10:26</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SliderPageTest.setUp()[pri:0, instance:com.jala.qa.testcases.SliderPageTest@524f3b3a]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@1808432653</td>   <td></td> </tr>
-<tr bgcolor="eccb8e">  <td>24/05/12 16:10:37</td>   <td>11100</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SliderPageTest.validateSliderMover()[pri:0, instance:com.jala.qa.testcases.SliderPageTest@524f3b3a]">validateSliderMover</td> 
-  <td>main@1808432653</td>   <td></td> </tr>
-<tr bgcolor="eccb8e">  <td>24/05/12 16:10:38</td>   <td>12013</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SliderPageTest.tearDown()[pri:0, instance:com.jala.qa.testcases.SliderPageTest@524f3b3a]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1808432653</td>   <td></td> </tr>
+<tr bgcolor="eccb8e">  <td>24/05/14 15:33:18</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;PopupPageTest.setUp()[pri:0, instance:com.jala.qa.testcases.PopupPageTest@3f9342d4]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1223240796</td>   <td></td> </tr>
+<tr bgcolor="eccb8e">  <td>24/05/14 15:33:25</td>   <td>6549</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PopupPageTest.validatePopUpone()[pri:1, instance:com.jala.qa.testcases.PopupPageTest@3f9342d4]">validatePopUpone</td> 
+  <td>main@1223240796</td>   <td></td> </tr>
+<tr bgcolor="eccb8e">  <td>24/05/14 15:33:38</td>   <td>19874</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;PopupPageTest.tearDown()[pri:0, instance:com.jala.qa.testcases.PopupPageTest@3f9342d4]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1223240796</td>   <td></td> </tr>
+<tr bgcolor="eccb8e">  <td>24/05/14 15:33:38</td>   <td>20231</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;PopupPageTest.setUp()[pri:0, instance:com.jala.qa.testcases.PopupPageTest@3f9342d4]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1223240796</td>   <td></td> </tr>
+<tr bgcolor="eccb8e">  <td>24/05/14 15:33:43</td>   <td>25369</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PopupPageTest.validatePopUpTwo()[pri:2, instance:com.jala.qa.testcases.PopupPageTest@3f9342d4]">validatePopUpTwo</td> 
+  <td>main@1223240796</td>   <td></td> </tr>
+<tr bgcolor="eccb8e">  <td>24/05/14 15:34:42</td>   <td>83960</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;PopupPageTest.tearDown()[pri:0, instance:com.jala.qa.testcases.PopupPageTest@3f9342d4]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1223240796</td>   <td></td> </tr>
+<tr bgcolor="eccb8e">  <td>24/05/14 15:34:43</td>   <td>84690</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;PopupPageTest.setUp()[pri:0, instance:com.jala.qa.testcases.PopupPageTest@3f9342d4]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1223240796</td>   <td></td> </tr>
+<tr bgcolor="eccb8e">  <td>24/05/14 15:34:48</td>   <td>89774</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PopupPageTest.validatePopUpThree()[pri:3, instance:com.jala.qa.testcases.PopupPageTest@3f9342d4]">validatePopUpThree</td> 
+  <td>main@1223240796</td>   <td></td> </tr>
+<tr bgcolor="eccb8e">  <td>24/05/14 15:35:35</td>   <td>137325</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;PopupPageTest.tearDown()[pri:0, instance:com.jala.qa.testcases.PopupPageTest@3f9342d4]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1223240796</td>   <td></td> </tr>
+<tr bgcolor="eccb8e">  <td>24/05/14 15:35:36</td>   <td>137694</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;PopupPageTest.setUp()[pri:0, instance:com.jala.qa.testcases.PopupPageTest@3f9342d4]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1223240796</td>   <td></td> </tr>
+<tr bgcolor="eccb8e">  <td>24/05/14 15:35:40</td>   <td>142379</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PopupPageTest.validatePopUpFour()[pri:4, instance:com.jala.qa.testcases.PopupPageTest@3f9342d4]">validatePopUpFour</td> 
+  <td>main@1223240796</td>   <td></td> </tr>
+<tr bgcolor="eccb8e">  <td>24/05/14 15:36:47</td>   <td>208740</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;PopupPageTest.tearDown()[pri:0, instance:com.jala.qa.testcases.PopupPageTest@3f9342d4]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1223240796</td>   <td></td> </tr>
+<tr bgcolor="eccb8e">  <td>24/05/14 15:36:47</td>   <td>209233</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;PopupPageTest.setUp()[pri:0, instance:com.jala.qa.testcases.PopupPageTest@3f9342d4]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1223240796</td>   <td></td> </tr>
+<tr bgcolor="eccb8e">  <td>24/05/14 15:36:52</td>   <td>214273</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PopupPageTest.validatePopUpFive()[pri:5, instance:com.jala.qa.testcases.PopupPageTest@3f9342d4]">validatePopUpFive</td> 
+  <td>main@1223240796</td>   <td></td> </tr>
+<tr bgcolor="eccb8e">  <td>24/05/14 15:36:55</td>   <td>216598</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;PopupPageTest.tearDown()[pri:0, instance:com.jala.qa.testcases.PopupPageTest@3f9342d4]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1223240796</td>   <td></td> </tr>
+<tr bgcolor="eccb8e">  <td>24/05/14 15:36:55</td>   <td>216844</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;PopupPageTest.setUp()[pri:0, instance:com.jala.qa.testcases.PopupPageTest@3f9342d4]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1223240796</td>   <td></td> </tr>
+<tr bgcolor="eccb8e">  <td>24/05/14 15:37:00</td>   <td>222120</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PopupPageTest.validatePopUpSix()[pri:6, instance:com.jala.qa.testcases.PopupPageTest@3f9342d4]">validatePopUpSix</td> 
+  <td>main@1223240796</td>   <td></td> </tr>
+<tr bgcolor="eccb8e">  <td>24/05/14 15:37:01</td>   <td>223348</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;PopupPageTest.tearDown()[pri:0, instance:com.jala.qa.testcases.PopupPageTest@3f9342d4]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1223240796</td>   <td></td> </tr>
+<tr bgcolor="eccb8e">  <td>24/05/14 15:37:02</td>   <td>223585</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;PopupPageTest.setUp()[pri:0, instance:com.jala.qa.testcases.PopupPageTest@3f9342d4]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1223240796</td>   <td></td> </tr>
+<tr bgcolor="eccb8e">  <td>24/05/14 15:37:07</td>   <td>228789</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PopupPageTest.validateAlertPopUp()[pri:7, instance:com.jala.qa.testcases.PopupPageTest@3f9342d4]">validateAlertPopUp</td> 
+  <td>main@1223240796</td>   <td></td> </tr>
+<tr bgcolor="eccb8e">  <td>24/05/14 15:37:08</td>   <td>229973</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;PopupPageTest.tearDown()[pri:0, instance:com.jala.qa.testcases.PopupPageTest@3f9342d4]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1223240796</td>   <td></td> </tr>
+<tr bgcolor="eccb8e">  <td>24/05/14 15:37:08</td>   <td>230219</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;PopupPageTest.setUp()[pri:0, instance:com.jala.qa.testcases.PopupPageTest@3f9342d4]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1223240796</td>   <td></td> </tr>
+<tr bgcolor="eccb8e">  <td>24/05/14 15:37:13</td>   <td>235270</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PopupPageTest.validateConfirmBox1()[pri:8, instance:com.jala.qa.testcases.PopupPageTest@3f9342d4]">validateConfirmBox1</td> 
+  <td>main@1223240796</td>   <td></td> </tr>
+<tr bgcolor="eccb8e">  <td>24/05/14 15:37:15</td>   <td>236427</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;PopupPageTest.tearDown()[pri:0, instance:com.jala.qa.testcases.PopupPageTest@3f9342d4]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1223240796</td>   <td></td> </tr>
+<tr bgcolor="eccb8e">  <td>24/05/14 15:37:15</td>   <td>236685</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;PopupPageTest.setUp()[pri:0, instance:com.jala.qa.testcases.PopupPageTest@3f9342d4]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1223240796</td>   <td></td> </tr>
+<tr bgcolor="eccb8e">  <td>24/05/14 15:37:19</td>   <td>241322</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PopupPageTest.validateConfirmBox()[pri:9, instance:com.jala.qa.testcases.PopupPageTest@3f9342d4]">validateConfirmBox</td> 
+  <td>main@1223240796</td>   <td></td> </tr>
+<tr bgcolor="eccb8e">  <td>24/05/14 15:37:22</td>   <td>243518</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;PopupPageTest.tearDown()[pri:0, instance:com.jala.qa.testcases.PopupPageTest@3f9342d4]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1223240796</td>   <td></td> </tr>
 </table>
