--- a/test-output/index.html
+++ b/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\Sarvadnya\AppData\Local\Temp\testng-eclipse-1987874448\testng-customsuite.xml</span>
+                    <span>C:\Users\Sarvadnya\AppData\Local\Temp\testng-eclipse-702915934\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -102,7 +102,7 @@
                     <div class="method-list-content failed suite-Default_suite">
                       <span>
                         <img src="failed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.jala.qa.testcases.LinksPageTest" class="method navigator-link" hash-for-method="validatelinks">validatelinks</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="com.jala.qa.testcases.iFramePageTest" class="method navigator-link" hash-for-method="ValidateiFrame2">ValidateiFrame2</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content failed suite-Default_suite -->
@@ -116,7 +116,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.jala.qa.testcases.LinksPageTest" class="method navigator-link" hash-for-method="validateWorkingLinks">validateWorkingLinks</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="com.jala.qa.testcases.iFramePageTest" class="method navigator-link" hash-for-method="ValidateiFrame1">ValidateiFrame1</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -134,23 +134,22 @@
           <div class="suite-Default_suite-class-failed">
             <div class="main-panel-header rounded-window-top">
               <img src="failed.png"/>
-              <span class="class-name">com.jala.qa.testcases.LinksPageTest</span>
+              <span class="class-name">com.jala.qa.testcases.iFramePageTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="validatelinks">
-                  </a> <!-- validatelinks -->
-                  <span class="method-name">validatelinks</span>
-                  <div class="stack-trace">org.openqa.selenium.NoSuchWindowException: no such window: target window already closed
-from unknown error: web view not found
-  (Session info: chrome=124.0.6367.203)
+                  <a name="ValidateiFrame2">
+                  </a> <!-- ValidateiFrame2 -->
+                  <span class="method-name">ValidateiFrame2</span>
+                  <div class="stack-trace">org.openqa.selenium.ScriptTimeoutException: script timeout
+  (Session info: chrome=125.0.6422.61)
 Build info: version: &apos;4.16.1&apos;, revision: &apos;9b4c83354e&apos;
 System info: os.name: &apos;Windows 11&apos;, os.arch: &apos;amd64&apos;, os.version: &apos;10.0&apos;, java.version: &apos;17.0.9&apos;
 Driver info: org.openqa.selenium.chrome.ChromeDriver
-Command: [d8139332cdb5035fa749b24e9a06a727, goBack {}]
-Capabilities {acceptInsecureCerts: false, browserName: chrome, browserVersion: 124.0.6367.203, chrome: {chromedriverVersion: 124.0.6367.207 (a9001a6e39f..., userDataDir: C:\Users\SARVAD~1\AppData\L...}, fedcm:accounts: true, goog:chromeOptions: {debuggerAddress: localhost:63529}, networkConnectionEnabled: false, pageLoadStrategy: normal, platformName: windows, proxy: Proxy(), se:cdp: ws://localhost:63529/devtoo..., se:cdpVersion: 124.0.6367.203, setWindowRect: true, strictFileInteractability: false, timeouts: {implicit: 0, pageLoad: 300000, script: 30000}, unhandledPromptBehavior: dismiss and notify, webauthn:extension:credBlob: true, webauthn:extension:largeBlob: true, webauthn:extension:minPinLength: true, webauthn:extension:prf: true, webauthn:virtualAuthenticators: true}
-Session ID: d8139332cdb5035fa749b24e9a06a727
+Command: [e63db97e5cca2e25ffe2d0368694569f, executeAsyncScript {script=window.scrollBy(0,500), args=[]}]
+Capabilities {acceptInsecureCerts: false, browserName: chrome, browserVersion: 125.0.6422.61, chrome: {chromedriverVersion: 125.0.6422.60 (3ac3319bff9f..., userDataDir: C:\Users\SARVAD~1\AppData\L...}, fedcm:accounts: true, goog:chromeOptions: {debuggerAddress: localhost:65282}, networkConnectionEnabled: false, pageLoadStrategy: normal, platformName: windows, proxy: Proxy(), se:cdp: ws://localhost:65282/devtoo..., se:cdpVersion: 125.0.6422.61, setWindowRect: true, strictFileInteractability: false, timeouts: {implicit: 0, pageLoad: 300000, script: 30000}, unhandledPromptBehavior: dismiss and notify, webauthn:extension:credBlob: true, webauthn:extension:largeBlob: true, webauthn:extension:minPinLength: true, webauthn:extension:prf: true, webauthn:virtualAuthenticators: true}
+Session ID: e63db97e5cca2e25ffe2d0368694569f
 	at java.base/jdk.internal.reflect.NativeConstructorAccessorImpl.newInstance0(Native Method)
 	at java.base/jdk.internal.reflect.NativeConstructorAccessorImpl.newInstance(NativeConstructorAccessorImpl.java:77)
 	at java.base/jdk.internal.reflect.DelegatingConstructorAccessorImpl.newInstance(DelegatingConstructorAccessorImpl.java:45)
@@ -163,11 +162,9 @@ Session ID: d8139332cdb5035fa749b24e9a06a727
 	at org.openqa.selenium.remote.service.DriverCommandExecutor.invokeExecute(DriverCommandExecutor.java:200)
 	at org.openqa.selenium.remote.service.DriverCommandExecutor.execute(DriverCommandExecutor.java:175)
 	at org.openqa.selenium.remote.RemoteWebDriver.execute(RemoteWebDriver.java:523)
-	at org.openqa.selenium.remote.RemoteWebDriver.execute(RemoteWebDriver.java:596)
-	at org.openqa.selenium.remote.RemoteWebDriver.execute(RemoteWebDriver.java:600)
-	at org.openqa.selenium.remote.RemoteWebDriver$RemoteNavigation.back(RemoteWebDriver.java:1058)
-	at com.jala.qa.pages.LinksPage.clickOnLinks(LinksPage.java:68)
-	at com.jala.qa.testcases.LinksPageTest.validatelinks(LinksPageTest.java:47)
+	at org.openqa.selenium.remote.RemoteWebDriver.executeAsyncScript(RemoteWebDriver.java:476)
+	at com.jala.qa.pages.iFramePage.checkiframe2(iFramePage.java:43)
+	at com.jala.qa.testcases.iFramePageTest.ValidateiFrame2(iFramePageTest.java:43)
 	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
 	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:77)
 	at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
@@ -202,14 +199,14 @@ Session ID: d8139332cdb5035fa749b24e9a06a727
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.jala.qa.testcases.LinksPageTest</span>
+              <span class="class-name">com.jala.qa.testcases.iFramePageTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="validateWorkingLinks">
-                  </a> <!-- validateWorkingLinks -->
-                  <span class="method-name">validateWorkingLinks</span>
+                  <a name="ValidateiFrame1">
+                  </a> <!-- ValidateiFrame1 -->
+                  <span class="method-name">ValidateiFrame1</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -217,7 +214,7 @@ Session ID: d8139332cdb5035fa749b24e9a06a727
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Sarvadnya\AppData\Local\Temp\testng-eclipse-1987874448\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\Sarvadnya\AppData\Local\Temp\testng-eclipse-702915934\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -226,7 +223,7 @@ Session ID: d8139332cdb5035fa749b24e9a06a727
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.jala.qa.testcases.LinksPageTest&quot;/&gt;
+      &lt;class name=&quot;com.jala.qa.testcases.iFramePageTest&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -268,18 +265,18 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(2);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'validateWorkingLinks')
-data.setCell(0, 2, 'com.jala.qa.testcases.LinksPageTest')
-data.setCell(0, 3, 2637);
+data.setCell(0, 1, 'ValidateiFrame2')
+data.setCell(0, 2, 'com.jala.qa.testcases.iFramePageTest')
+data.setCell(0, 3, 30377);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'validatelinks')
-data.setCell(1, 2, 'com.jala.qa.testcases.LinksPageTest')
-data.setCell(1, 3, 745);
+data.setCell(1, 1, 'ValidateiFrame1')
+data.setCell(1, 2, 'com.jala.qa.testcases.iFramePageTest')
+data.setCell(1, 3, 74);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 3 seconds</span>
+              <span class="suite-total-time">Total running time: 30 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -305,32 +302,32 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.jala.qa.testcases.LinksPageTest</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">com.jala.qa.testcases.iFramePageTest</div> <!-- chronological-class-name -->
               <div class="configuration-method before">
                 <span class="method-name">setUp</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">validateWorkingLinks</span>
-                <span class="method-start">7633 ms</span>
+                <span class="method-name">ValidateiFrame1</span>
+                <span class="method-start">6218 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">10270 ms</span>
+                <span class="method-start">6293 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-method before">
                 <span class="method-name">setUp</span>
-                <span class="method-start">10629 ms</span>
+                <span class="method-start">6552 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <img src="failed.png">
                 </img>
-                <span class="method-name">validatelinks</span>
-                <span class="method-start">17706 ms</span>
+                <span class="method-name">ValidateiFrame2</span>
+                <span class="method-start">12225 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">18455 ms</span>
+                <span class="method-start">42622 ms</span>
               </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
