--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,16 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="7171bf">  <td>24/05/15 21:08:10</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LinksPageTest.setUp()[pri:0, instance:com.jala.qa.testcases.LinksPageTest@77102b91]">&gt;&gt;setUp</td> 
+<tr bgcolor="7171bf">  <td>24/05/17 17:27:22</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;iFramePageTest.setUp()[pri:0, instance:com.jala.qa.testcases.iFramePageTest@77102b91]">&gt;&gt;setUp</td> 
 <td>&nbsp;</td>  <td>main@1335503880</td>   <td></td> </tr>
-<tr bgcolor="7171bf">  <td>24/05/15 21:08:17</td>   <td>7631</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LinksPageTest.validateWorkingLinks()[pri:1, instance:com.jala.qa.testcases.LinksPageTest@77102b91]">validateWorkingLinks</td> 
+<tr bgcolor="7171bf">  <td>24/05/17 17:27:28</td>   <td>6217</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="iFramePageTest.ValidateiFrame1()[pri:1, instance:com.jala.qa.testcases.iFramePageTest@77102b91]">ValidateiFrame1</td> 
   <td>main@1335503880</td>   <td></td> </tr>
-<tr bgcolor="7171bf">  <td>24/05/15 21:08:20</td>   <td>10268</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LinksPageTest.tearDown()[pri:0, instance:com.jala.qa.testcases.LinksPageTest@77102b91]">&lt;&lt;tearDown</td> 
+<tr bgcolor="7171bf">  <td>24/05/17 17:27:28</td>   <td>6292</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;iFramePageTest.tearDown()[pri:0, instance:com.jala.qa.testcases.iFramePageTest@77102b91]">&lt;&lt;tearDown</td> 
 <td>&nbsp;</td>  <td>main@1335503880</td>   <td></td> </tr>
-<tr bgcolor="7171bf">  <td>24/05/15 21:08:20</td>   <td>10627</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LinksPageTest.setUp()[pri:0, instance:com.jala.qa.testcases.LinksPageTest@77102b91]">&gt;&gt;setUp</td> 
+<tr bgcolor="7171bf">  <td>24/05/17 17:27:28</td>   <td>6551</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;iFramePageTest.setUp()[pri:0, instance:com.jala.qa.testcases.iFramePageTest@77102b91]">&gt;&gt;setUp</td> 
 <td>&nbsp;</td>  <td>main@1335503880</td>   <td></td> </tr>
-<tr bgcolor="7171bf">  <td>24/05/15 21:08:27</td>   <td>17704</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LinksPageTest.validatelinks()[pri:2, instance:com.jala.qa.testcases.LinksPageTest@77102b91]">validatelinks</td> 
+<tr bgcolor="7171bf">  <td>24/05/17 17:27:34</td>   <td>12224</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="iFramePageTest.ValidateiFrame2()[pri:2, instance:com.jala.qa.testcases.iFramePageTest@77102b91]">ValidateiFrame2</td> 
   <td>main@1335503880</td>   <td></td> </tr>
-<tr bgcolor="7171bf">  <td>24/05/15 21:08:28</td>   <td>18453</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LinksPageTest.tearDown()[pri:0, instance:com.jala.qa.testcases.LinksPageTest@77102b91]">&lt;&lt;tearDown</td> 
+<tr bgcolor="7171bf">  <td>24/05/17 17:28:04</td>   <td>42621</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;iFramePageTest.tearDown()[pri:0, instance:com.jala.qa.testcases.iFramePageTest@77102b91]">&lt;&lt;tearDown</td> 
 <td>&nbsp;</td>  <td>main@1335503880</td>   <td></td> </tr>
 </table>
